# sbx2

./: .gitignore  CMakeLists.txt  README.MD  SbxAppBindings.xml  SbxDrawBindings.xml  test.lua
Lua/lua-5.4.4/: INSTALL.vcxproj  INSTALL.vcxproj.filters  lua_shared.vcxproj  lua_static.vcxproj  luac.vcxproj.filters
Lua/lua-5.4.4/lua_static.dir/Debug/lua_static.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  lua_static.lastbuildstate
autobind/: CMakeLists.txt  test.xml
autobind/src/: autobind-file.cpp  autobind-file.h  autobind-file.hpp  binding-generator.cpp  binding-generator.h  binding-generator.hpp  c-function-spec.hpp  c-parameter.hpp  c-struct.hpp  code-writer.cpp  code-writer.hpp  definitions-generator.cpp  definitions-generator.hpp  function-spec.h  lua-function-spec.h  lua-function-spec.hpp  lua-parameter.hpp  main.cpp  parameter.hpp  struct-spec.hpp
autobind/testOut/: AB-test-implementation.c  AB-test-interface.h
dependencies/Lua/lua-5.4.4/: lua_static.vcxproj.filters  luac.vcxproj
dependencies/Lua/lua-5.4.4/lua_static.dir/Debug/lua_static.tlog/: CL.command.1.tlog  Lib-link.read.1.tlog  custombuild.write.1.tlog
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/tinyxml2/: DartConfiguration.tcl  tinyxml2.pc.gen
src/: handle.hpp  main.cpp
src/modules/app/: AB-App-implementation.c  AB-App-interface.h  app.cpp  app.hpp
src/modules/draw/: AB-Draw-implementation.c  AB-Draw-interface.h  draw.cpp  draw.hpp  graphics.cpp  graphics.hpp  primitive.cpp  primitive.hpp  shader.cpp  shader.hpp
tinyxml2/: tinyxml2.pc
